--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "apexcharts": "^4.4.0",
+    "@date-io/jalaali": "^3.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.5",
+    "@mui/x-date-pickers": "^7.27.0",
+    "date-fns": "^4.1.0",
+    "date-fns-jalali": "^4.0.0-0",
+    "dayjs": "^1.11.13",
     "moment-jalaali": "^0.10.4",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
+    "react-date-object": "^2.1.9",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0"
