--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
     "@mui/x-date-pickers": "^7.27.0",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.9",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "date-fns-jalali": "^4.0.0-0",
     "dayjs": "^1.11.13",
-    "moment-jalaali": "^0.10.4",
+    "js-cookie": "^3.0.5",
+    "moment-jalaali": "^0.9.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -28,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/moment-jalaali": "^0.7.9",
     "@types/node": "^20",
     "@types/react": "^19",
